tests/syntactic/input_directive2/input_directive2.dl
.decl A(x:number)
.decl B(x:number)
.input B(IO=stdout)
.input A,B(IO=stdout)
